--- a/ch11-jpa-shop/pom.xml
+++ b/ch11-jpa-shop/pom.xml
@@ -14,7 +14,7 @@
     <properties>
 
         <!-- 기본 설정 -->
-        <java.version>1.6</java.version>
+        <java.version>1.8</java.version>
         <!-- 프로젝트 코드 인코딩 설정 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -25,7 +25,7 @@
         <hibernate.version>4.3.10.Final</hibernate.version>
         <!-- 데이터베이스 버전 -->
         <tomcat-jdbc.version>7.0.57</tomcat-jdbc.version>
-        <h2db.version>1.4.187</h2db.version>
+        <h2db.version>2.1.214</h2db.version>
         <!-- JSP, WEB 버전 -->
         <jsp.version>2.2</jsp.version>
         <jstl.version>1.2</jstl.version>
@@ -148,7 +148,11 @@
 	       	    <uriEncoding>UTF-8</uriEncoding>
 	        </configuration>
 	      </plugin>
-	                 	      
+	      
+	      <plugin>
+			  <artifactId>maven-war-plugin</artifactId>
+			  <version>3.2.2</version>
+		  </plugin>    	      
 	    </plugins>
 	</build>
 </project>
