--- a/ch12-springdata-shop/pom.xml
+++ b/ch12-springdata-shop/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 
 		<!-- 기본 설정 -->
-		<java.version>1.6</java.version>
+		<java.version>1.8</java.version>
 		<!-- 프로젝트 코드 인코딩 설정 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -30,7 +30,7 @@
 		<hibernate.version>4.3.10.Final</hibernate.version>
 		<!-- 데이터베이스 버전 -->
 		<tomcat-jdbc.version>7.0.52</tomcat-jdbc.version>
-		<h2db.version>1.4.187</h2db.version>
+		<h2db.version>2.1.214</h2db.version>
 		<!-- JSP, WEB 버전 -->
 		<jsp.version>2.2</jsp.version>
 		<jstl.version>1.2</jstl.version>
@@ -44,7 +44,8 @@
 	</properties>
 
 	<dependencies>
-
+		
+		
 		<!-- 스프링 데이터 JPA -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -54,17 +55,18 @@
 
 		<!-- QueryDSL -->
 		<dependency>
-			<groupId>com.mysema.querydsl</groupId>
-			<artifactId>querydsl-apt</artifactId>
-			<version>${querydsl.version}</version>
-			<scope>provided</scope>
+		    <groupId>com.mysema.querydsl</groupId>
+		    <artifactId>querydsl-apt</artifactId>
+		    <version>${querydsl.version}</version>
+		    <scope>provided</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>com.mysema.querydsl</groupId>
-			<artifactId>querydsl-jpa</artifactId>
-			<version>${querydsl.version}</version>
+		    <groupId>com.mysema.querydsl</groupId>
+		    <artifactId>querydsl-jpa</artifactId>
+		    <version>${querydsl.version}</version>
 		</dependency>
+
 
 		<!-- 스프링 MVC -->
 		<dependency>
@@ -185,7 +187,6 @@
 
 	<build>
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -221,6 +222,11 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			
+			<plugin>
+			    <artifactId>maven-war-plugin</artifactId>
+			    <version>3.2.2</version>
 			</plugin>
 		</plugins>
 	</build>
