--- a/ch11-jpa-shop/src/main/webapp/WEB-INF/web.xml
+++ b/ch11-jpa-shop/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:webAppConfig.xml, classpath:appConfig.xml</param-value>
+            <param-value>classpath:webAppConfig.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
